# plotly-kz-map

./: README.md  pyproject.toml  requirements.txt
plotly_kz_map/: __init__.py
plotly_kz_map/assets/: kz-adm1.geojson
tests/: test_main.py
